tests/transpiler/x/scala/sum_builtin.error
exit status 1
/workspace/mochi/tests/transpiler/x/scala/sum_builtin.scala:5: warning: non-variable type argument Int in type pattern List[Int] (the underlying of List[Int]) is unchecked since it is eliminated by erasure
        case xs: List[Int] => println(xs.mkString(" ") )
                 ^
/workspace/mochi/tests/transpiler/x/scala/sum_builtin.scala:10: error: not found: value sum
        mochiPrint(sum(List(1, 2, 3)))
                   ^
one warning found
one error found
